<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WaiterApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_enter_patrons">EnterPatronsActivity</string>
    <string name="table_No">Enter Table No.</string>
    <string name="patron_No">Enter Guest No.</string>
    <string name="button_save">Save</string>
    <string name="button_clear">Reset Entry</string>
    <string name="food_prompt">Choose A Food</string>
    <string name="button_view">View</string>
    <string name="button_enter_patrons">Enter Patrons</string>
    <string name="button_store">Save Database</string>
    <string name="button_load">Load</string>
    <string name="button_clear_data">Clear Current Data</string>
    <string name="button_clear_database">Clear Saved Database</string>
    <string name="button_exit">Exit</string>

    <string-array name="food_array">
        <item>Apple</item>
        <item>Banana</item>
        <item>Cider</item>
        <item>Durian</item>
        <item>Eel</item>
        <item>Froyo</item>
    </string-array>

    <string name="title_activity_load_db">LoadDb</string>
    <string name="title_activity_view_db">ViewDb</string>
    <string name="title_activity_store_db">StoreDbActivity</string>
    
    <string name="hint_storeDb">Pick a file name</string>
    <string name="title_activity_clear_db">ClearDbActivity</string>

</resources>
