<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/enterPatrons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_enter_patrons"
        android:onClick="enterPatrons" />

    <Button
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_view"
        android:onClick="viewDb" />

    <Button
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_store"
        android:onClick="storeDb" />

    <Button
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_load"
        android:onClick="loadDb" />

    <Button
        android:id="@+id/clearData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear_data"
        android:onClick="clearData" />

    <Button
        android:id="@+id/clearDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear_database"
        android:onClick="clearDb" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_exit"
        android:onClick="exit" />
    
</TableLayout>